[gd_scene load_steps=7 format=3 uid="uid://dxxoi1wwk7s4h"]

[ext_resource type="Script" path="res://menu/MoveMenu.gd" id="1_0c02q"]
[ext_resource type="Theme" uid="uid://cyyjojvna3xqg" path="res://res/themes/def_theme.tres" id="1_uuca8"]
[ext_resource type="Texture2D" uid="uid://d3vuwpvyoasyi" path="res://res/img/texture/movemenu/debug.jpg" id="2_7bcqn"]
[ext_resource type="Script" path="res://menu/MoveMenuButton.gd" id="3_xbwjk"]

[sub_resource type="Gradient" id="Gradient_57tio"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bpx7a"]
gradient = SubResource("Gradient_57tio")

[node name="MoveMenu" type="CanvasLayer"]
script = ExtResource("1_0c02q")
move_button_default_texture = ExtResource("2_7bcqn")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_right = 0.469531
anchor_bottom = 1.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="bg" type="TextureRect" parent="Control"]
self_modulate = Color(1, 1, 1, 0.447059)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_bpx7a")

[node name="VBox" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="Control/VBox"]
layout_mode = 2
theme = ExtResource("1_uuca8")
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 7
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 20
theme_override_font_sizes/normal_font_size = 81
bbcode_enabled = true
text = "   Move"
fit_content = true

[node name="ScrollContainer" type="ScrollContainer" parent="Control/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="SceneContainer" type="GridContainer" parent="Control/VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/h_separation = 43
theme_override_constants/v_separation = 33
columns = 2

[node name="Template" type="VBoxContainer" parent="Control/VBox/ScrollContainer/SceneContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
alignment = 1
script = ExtResource("3_xbwjk")

[node name="TextureRect" type="TextureRect" parent="Control/VBox/ScrollContainer/SceneContainer/Template"]
layout_mode = 2
texture = ExtResource("2_7bcqn")

[node name="Button" type="Button" parent="Control/VBox/ScrollContainer/SceneContainer/Template"]
layout_mode = 2
theme = ExtResource("1_uuca8")
theme_override_font_sizes/font_size = 22
text = "SCENE NAME"

[node name="Button" type="Button" parent="."]
offset_left = 1109.0
offset_top = 12.0
offset_right = 1258.0
offset_bottom = 123.0
theme = ExtResource("1_uuca8")
theme_override_font_sizes/font_size = 55
text = "< Back"

[connection signal="move_button_up" from="Control/VBox/ScrollContainer/SceneContainer/Template" to="." method="_on_template_move_button_up"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
